fix: Slider finishing spacing for label, reset icon & same with color group control

--- a/inc/customizer/custom-controls/assets/css/unminified/responsive-slider-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/responsive-slider-rtl.css
@@ -146,10 +146,15 @@
 .customize-control-ast-slider .ast-resp-slider-reset-wrap,
 .customize-control-ast-responsive-slider .ast-resp-slider-reset-wrap {
   position: absolute;
-  top: 2px;
   display: inline-block;
   line-height: 1;
   left: 0;
+}
+.customize-control-ast-slider .ast-resp-slider-reset-wrap {
+	top: 2px;
+}
+.customize-control-ast-responsive-slider .ast-resp-slider-reset-wrap {
+	top: 2px;
 }
 .customize-control-ast-settings-group .customize-control-ast-slider .ast-resp-slider-reset-wrap,
 .customize-control-ast-settings-group .customize-control-ast-responsive-slider .ast-resp-slider-reset-wrap {
